--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <head>
 <title>WOW 成就-冰冷黑暗的爪牙</title>
 <meta name="description" content="魔獸世界9.1 冰冷黑暗的爪牙倒數計時" />
-<link rel="icon" type="image/png" sizes="70x07" href="images/inv_mawguardhandmountwhite_70.png <view-source:https://wayne2002323.github.io/minions-of-the-cold-dark/images/inv_mawguardhandmountwhite_70.png>">
-<link rel="apple-touch-icon" sizes="180x180" href="images/inv_mawguardhandmountwhite_180.png <view-source:https://wayne2002323.github.io/minions-of-the-cold-dark/images/inv_mawguardhandmountwhite_180.png>">
+<link rel="icon" type="image/png" sizes="70x07" href="images/inv_mawguardhandmountwhite_70.png">
+<link rel="apple-touch-icon" sizes="180x180" href="images/inv_mawguardhandmountwhite_180.png">
 <meta name="msapplication-TileColor" content="#2e2e2e">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
 <script
-  src="https://code.jquery.com/jquery-1.12.4.js <view-source:https://code.jquery.com/jquery-1.12.4.js>"
+  src="https://code.jquery.com/jquery-1.12.4.js"
   integrity="sha256-Qw82+bXyGq6MydymqBxNPYTaUXXq7c8v3CwiYwLLNXU="
   crossorigin="anonymous"></script>
-<script src='jquery.timers.js <view-source:https://wayne2002323.github.io/minions-of-the-cold-dark/jquery.timers.js>' type='text/javascript'></script>
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-YFJYCQ6V88 <view-source:https://www.googletagmanager.com/gtag/js?id=G-YFJYCQ6V88>"></script>
+<script src='jquery.timers.js' type='text/javascript'></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-YFJYCQ6V88"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
