--- a/222/index.html
+++ b/222/index.html
@@ -157,7 +157,7 @@
     var tableList = 13;
     var thisDate = testDate !== '' ? new Date(testDate) : new Date();
     var eachTime = 75;//每隔3天3小时
-    var eventarray=['1','2','3'];
+    var eventarray=['从艾拉格岗哨前往河畔营地','从河流营地到雄鹰之眼哨站','雄鹰之眼哨站到艾拉格岗哨'];
     var hours = Math.abs(thisDate - firstDate) / 36e5;
 
     var thistimes = parseInt((parseInt(hours) / eachTime));
