--- a/222/index.html
+++ b/222/index.html
@@ -1,7 +1,7 @@
 <html> 
 <head>
-<title>WOW 成就-冰冷黑暗的爪牙</title>
-<meta name="description" content="魔兽世界9.1 冰冷黑暗的爪牙倒数计时" />
+<title>WOW 成就-欧恩哈拉之路</title>
+<meta name="description" content="魔兽世界10.0 欧恩哈拉之路倒数计时" />
 <link rel="icon" type="image/png" sizes="70x07" href="images/inv_mawguardhandmountwhite_70.png">
 <link rel="apple-touch-icon" sizes="180x180" href="images/inv_mawguardhandmountwhite_180.png">
 <meta name="msapplication-TileColor" content="#2e2e2e">
@@ -380,14 +380,14 @@
 	}
 </script>
 
-    <h1 class="title" id="title">成就-冰冷黑暗的爪牙</h1>
+    <h1 class="title" id="title">成就-欧恩哈拉之路</h1>
     <!-- <div class="text note">ps: 刚改版人潮众多，通常开场后5分钟内事件即结束</div> -->
     <div class="text" >目前在:<label id="place" style="color:#FFEB3B"> </label></div>
     <div class="text texttime" id="times">00:00:00</div>
     <div class="text" >下一次:<label id="NEXTplace" style="color:#FFEB3B"> </label></div>
     <div class="text textdate" id="NEXTDates"></div>
     <div class="text texttime" id="NEXTtimes">00:00:00</div>
-    <div class="text note Whitefont">ps: 经社群反馈，某些首领会跷班或代班，推测是偶发事件，整体顺序并不会大异动</div>
+    <!-- <div class="text note Whitefont">ps: 经社群反馈，某些首领会跷班或代班，推测是偶发事件，整体顺序并不会大异动</div> -->
     <div class="table" id="nexttable"></div>
     <div class="setting" id="setting">
     	 <h1 class="title" id="title">设定</h1>
