--- a/the-ohnahran-trail/index.html
+++ b/the-ohnahran-trail/index.html
@@ -2,8 +2,8 @@
 <head>
 <title>WOW 成就-欧恩哈拉之路</title>
 <meta name="description" content="魔兽世界10.0 欧恩哈拉之路倒数计时" />
-<link rel="icon" type="image/png" sizes="70x07" href="images/inv_mawguardhandmountwhite_70.png">
-<link rel="apple-touch-icon" sizes="180x180" href="images/inv_mawguardhandmountwhite_180.png">
+<link rel="icon" type="image/jpg" href="images/inv_misc_map06.jpg">
+<link rel="apple-touch-icon" href="images/inv_misc_map06.jpg">
 <meta name="msapplication-TileColor" content="#2e2e2e">
 <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=1">
 <script
